# alertmanager-silences-slack-reporter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docker.yml  release.yml
src/: main.rs
