[package]
name = "alertmanager-silences-slack-reporter"
version = "0.1.0"
edition = "2024"
authors = ["f9n <f9n@protonmail.com>"]
description = "A tool to fetch Alertmanager silences and report them to Slack"
license = "GPL-3.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

